[+] CRUD Restaurante e Pratos; [+] Filtros

--- a/cedro-restaurante/src/app/header/header.component.html
+++ b/cedro-restaurante/src/app/header/header.component.html
@@ -1,15 +1,9 @@
-<nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-  <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Home</a>
-      </li> 
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Restaurantes</a>
-      </li>
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Pratos</a>
-      </li>
-    </ul>     
-  </div>
-</nav>
+<nav class="light-blue">
+    <div class="nav-wrapper">
+      <ul id="nav-mobile" class="left hide-on-med-and-down">
+        <li><a href="/">Home</a></li>
+        <li><a href="/restaurante">Restaurantes</a></li>
+        <li><a href="/prato">Pratos</a></li>
+      </ul>
+    </div>
+  </nav>
