--- a/cedro-restaurante/src/app/home/home.component.html
+++ b/cedro-restaurante/src/app/home/home.component.html
@@ -1,3 +1,4 @@
-<p>
-  home works!
-</p>
+<div>
+  <h4>SISTEMA DE CADASTRO DE RESTAURANTES</h4>
+  <img width="450" src="../../assets/doner-kebab.jpg"/>
+</div>
